# ros2_anthropomorphic_robot_project

./: .gitignore  MATERIALS.md  README.md  doxygen_config
acg_resources_fanuc_m20ia_35m_controllers/: CMakeLists.txt  README.md  package.xml
acg_resources_fanuc_m20ia_35m_controllers/config/: moveit_controllers.yaml  ros2_controllers.yaml  task_space_control_demo.rviz
acg_resources_fanuc_m20ia_35m_controllers/launch/: gazebo_ros2_control_demo.launch.py  independent_joint_control_demo.launch.py  task_space_control_demo.launch.py
acg_resources_fanuc_m20ia_35m_description/: CMakeLists.txt  README.md  package.xml
acg_resources_fanuc_m20ia_35m_description/config/: urdf.rviz
acg_resources_fanuc_m20ia_35m_description/launch/: display.launch.py
acg_resources_fanuc_m20ia_35m_description/meshes/collision/: drilling_tool.stl  drilling_tool_alt.stl  slide_alt.stl
acg_resources_fanuc_m20ia_35m_description/meshes/visual/: drilling_tool.dae  link_0.dae  link_1.dae  link_2.dae  link_3.dae  link_4.dae  link_5.dae  link_6.dae  slide.dae
acg_resources_fanuc_m20ia_35m_description/resources/: drilling_tool_alt.blend  drilling_tool_alt.blend1  slide_alt.blend  slide_alt.blend1
acg_resources_fanuc_m20ia_35m_description/urdf/: fanuc_m20ia_35m.urdf
acg_resources_panda_description/: CMakeLists.txt  README.md  package.xml
acg_resources_panda_description/config/: urdf.rviz
acg_resources_panda_description/launch/: display.launch.py
acg_resources_panda_description/urdf/: panda.urdf
acg_resources_tools/: README.md  package.xml  setup.cfg  setup.py
acg_resources_tools/acg_resources_tools/: trajectory_analyzer.py
acg_resources_tools/resource/executed_joint_space_trajectories/: mapping_trajectories.txt
acg_resources_tools/resource/executed_joint_space_trajectories/executed_trajectory_2024-02-09_17-00-16/: executed_trajectory_2024-02-09_17-00-16_0.db3  metadata.yaml
acg_resources_tools/resource/executed_joint_space_trajectories/executed_trajectory_2024-02-09_17-14-57/: executed_trajectory_2024-02-09_17-14-57_0.db3  metadata.yaml
acg_resources_tools/resource/executed_joint_space_trajectories/executed_trajectory_2024-02-09_17-20-20/: executed_trajectory_2024-02-09_17-20-20_0.db3  metadata.yaml
acg_resources_tools/resource/executed_joint_space_trajectories/executed_trajectory_2024-02-09_17-23-30/: executed_trajectory_2024-02-09_17-23-30_0.db3  metadata.yaml
acg_resources_tools/resource/executed_joint_space_trajectories/executed_trajectory_2024-02-09_17-52-31/: executed_trajectory_2024-02-09_17-52-31_0.db3  metadata.yaml
acg_resources_tools/resource/executed_joint_space_trajectories/executed_trajectory_2024-02-09_17-56-36/: executed_trajectory_2024-02-09_17-56-36_0.db3  metadata.yaml
acg_resources_tools/resource/executed_joint_space_trajectories/executed_trajectory_2024-02-09_20-13-59/: executed_trajectory_2024-02-09_20-13-59_0.db3  metadata.yaml
acg_resources_tools/resource/executed_task_space_trajectories/: mapping_trajectories.txt
acg_resources_tools/resource/executed_task_space_trajectories/executed_trajectory_2024-02-13_16-40-29/: executed_trajectory_2024-02-13_16-40-29_0.db3  metadata.yaml
acg_resources_tools/resource/executed_task_space_trajectories/executed_trajectory_2024-02-13_16-47-26/: executed_trajectory_2024-02-13_16-47-26_0.db3  metadata.yaml
acg_resources_tools/resource/executed_task_space_trajectories/executed_trajectory_2024-02-13_16-52-18/: executed_trajectory_2024-02-13_16-52-18_0.db3  metadata.yaml
acg_resources_tools/resource/executed_task_space_trajectories/executed_trajectory_2024-02-13_16-53-21/: executed_trajectory_2024-02-13_16-53-21_0.db3  metadata.yaml
acg_resources_tools/resource/executed_task_space_trajectories/executed_trajectory_2024-02-13_16-57-39/: executed_trajectory_2024-02-13_16-57-39_0.db3  metadata.yaml
acg_resources_tools/resource/executed_task_space_trajectories/executed_trajectory_2024-02-13_17-03-45/: executed_trajectory_2024-02-13_17-03-45_0.db3  metadata.yaml
acg_resources_tools/resource/executed_task_space_trajectories/executed_trajectory_2024-02-13_17-32-28/: executed_trajectory_2024-02-13_17-32-28_0.db3  metadata.yaml
cartesian_control_msgs/: CMakeLists.txt  README.md  package.xml
cartesian_control_msgs/action/: FollowCartesianTrajectory.action
documentation/html/: annotated.html  (+92 more)
fanuc_m20ia_35m_planning_demo/: CMakeLists.txt  README.md  package.xml
fanuc_m20ia_35m_planning_demo/config/: joint_trajectory.yaml  pid.yaml  task_space.yaml
fanuc_m20ia_35m_planning_demo/include/: fanuc_m20ia_35m_planning_demo.hpp  planning_node.hpp
fanuc_m20ia_35m_planning_demo/launch/: plan_and_execute.launch.py
fanuc_m20ia_35m_planning_demo/src/: fanuc_m20ia_35m_planning_demo.cpp  planning_node.cpp  planning_node_parameters.yaml
task_space_path_generator/: README.md  package.xml  setup.cfg  setup.py
task_space_path_generator/config/: fanuc_m20ia_35m.rviz  fanuc_m20ia_35m.yaml  fanuc_m20ia_35m_moveit.rviz  panda.rviz  panda.yaml
task_space_path_generator/launch/: path_generator_moveit.launch.py  path_generator_rviz.launch.py  rviz.launch.py
task_space_path_generator/resource/Example_trajectories/traj1.bag/: metadata.yaml  traj1.bag_0.db3
task_space_path_generator/resource/Example_trajectories/traj2.bag/: metadata.yaml  traj2.bag_0.db3
task_space_path_generator/resource/Example_trajectories/traj3.bag/: metadata.yaml  traj3.bag_0.db3
task_space_path_generator/task_space_path_generator/: flow_layout.py  ouroboros.py  ouroboros_gui.py  ouroboros_parameters.yaml  path_generators.py  point_factory.py  view_path.py
task_space_trajectory_controller/: CMakeLists.txt  README.md  package.xml  task_space_trajectory_controller_plugin.xml
task_space_trajectory_controller/include/task_space_trajectory_controller/: task_space_trajectory_controller.hpp  task_space_trajectory_interpolator.hpp
task_space_trajectory_controller/src/: reference_generator.cpp  reference_generator_parameters.yaml  task_space_trajectory_controller.cpp  task_space_trajectory_controller_parameters.yaml  task_space_trajectory_interpolator.cpp
(+100 files in other folders)
