<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>acg_resources_fanuc_m20ia_35m_description</name>
  <version>0.1.0</version>
  <description>Fanuc M20iA/35M description package</description>

  <author email = "a.langella31@studenti.unisa.it">Antonio Langella</author>
  <author email = "m.marsico10@studenti.unisa.it">Michele Marsico</author>
  <author email = "s.paolino6@studenti.unisa.it">Salvatore Paolino</author>
  <author email = "a.zito32@studenti.unisa.it">Adamo Zito</author>
 
  <maintainer email = "a.langella31@studenti.unisa.it">Antonio Langella</maintainer>
  <maintainer email = "m.marsico10@studenti.unisa.it">Michele Marsico</maintainer>
  <maintainer email = "s.paolino6@studenti.unisa.it">Salvatore Paolino</maintainer>
  <maintainer email = "a.zito32@studenti.unisa.it">Adamo Zito</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
