<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>acg_resources_tools</name>
  <version>0.1.0</version>
  <description>A robot-agnostic module for utility tools</description>
  
  <author email = "a.langella31@studenti.unisa.it">Antonio Langella</author>
  <author email = "m.marsico10@studenti.unisa.it">Michele Marsico</author>
  <author email = "s.paolino6@studenti.unisa.it">Salvatore Paolino</author>
  <author email = "a.zito32@studenti.unisa.it">Adamo Zito</author>
 
  <maintainer email = "a.langella31@studenti.unisa.it">Antonio Langella</maintainer>
  <maintainer email = "m.marsico10@studenti.unisa.it">Michele Marsico</maintainer>
  <maintainer email = "s.paolino6@studenti.unisa.it">Salvatore Paolino</maintainer>
  <maintainer email = "a.zito32@studenti.unisa.it">Adamo Zito</maintainer>
  
  <license>BSD</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
